--- a/style.css
+++ b/style.css
@@ -15,10 +15,11 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 1px solid red;
 }
 .img-1{
     max-width: 200px;
-   
+
     border-radius: 5px;
 }
 
@@ -30,7 +31,7 @@ body{
 }
 .section{
     height: 300px;
-    
+
 width: 100%;
 }
 
@@ -44,17 +45,17 @@ footer{
     align-items: center;
     height:300px;
 }
-.testo-1 { 
+.testo-1 {
 height: 130px;
 display: flex;
 justify-content: center;
 
 }
 .testo-1 p {
-    
+
     margin-left: 20px;
     display: block;
-    
+
 }
 
 .content {
@@ -64,92 +65,15 @@ justify-content: center;
     align-items: center;
 }
 .section .testo-1 {
-    margin: 5px 10px; 
+    margin: 5px 10px;
     max-width: 480px;
 }
 
 footer p{
     font-size: xx-small;
-    
-}
-@media only screen and (min-width: 401px) and (max-width: 1450px)
-{
-body{
-    display:block;
-    background-color: black;
-}
-.menu{
-    font-size: medium;
-}
-
-
-.content{
-width: 30%;
-background-color: rgb(241, 241, 241) ;
-border-radius: 5px;
 
 }
 
-.page {
- display: flex;
-align-items: center;
-justify-content: center;
-}
-.sezione-1{
-    float: left;
-    width: 50%;
-    display: flex;
-    justify-content: flex-end;
-}
-.testo-1{
-    width: 50%;
-    margin-top: 50px;
-}
- .img{ margin-right: 30px;
-
- }
- .testo{
-     
-     width: 200px;
- }
-.spacer {
-    display: block;
-    height:10px;
-    
-    overflow: hidden;
-    width: 100%;
-    background-color: black;
-    
-}
-.part-1{
-    
-    width: 100%;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    background-color: rgb(224, 224, 224);
-}
-
-.part-2 {
-    display:flex;
-    background-color: rgb(224, 224, 224);
-    width: 100%;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    justify-content: space-around;
-}
- footer p{
-     font-size: initial;
-     margin-top: 10px;
- }
- .testo{
-     display: flex;
-     width: 90%;
- }
- .img-2{
-     display: flex;
-     width: 90%;
- }
-}
 @media only screen and (min-width: 1450px)
 {
 
@@ -161,8 +85,8 @@ justify-content: center;
     .menu{
         font-size: large;
     }
-    
-    
+
+
     .content{
     max-width: 30%;
    margin-top: 15px;
@@ -171,10 +95,10 @@ justify-content: center;
     height: 215px;
     margin-right: 50px;
     margin-left: 2px;
-    
-    
+
+
     }
-    
+
     .page {
      display: flex;
     align-items: center;
@@ -190,38 +114,39 @@ justify-content: center;
     .testo-1{
         width: 50%;
         margin-top: 125px;
-        
+
     }
      .img{ margin-right: 30px;
         max-width: 300px;
-    
+
      }
-     
+
 
  .testo--1{
     display: flex;
     justify-content: flex-start;
- }  
+ }
 
     .spacer {
         display: block;
         height:10px;
-       
+
         overflow: hidden;
         width: 100%;
         background-color: black;
-        
+
     }
     .part-1{
-       
+
         width: 100%;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
         background-color: rgb(224, 224, 224);
-        height: 400px;
+        height: 60vh;
+        border: 1px solid blue;
     }
 
-    
+
     .part-2 {
         display:flex;
         background-color: rgb(224, 224, 224);
@@ -242,17 +167,22 @@ justify-content: center;
            margin-top: 5px;
            height: 200px;
            padding-top: 5px;
-           
-            
+
+
      }
-   
+
     .img-2{
         float: left;
         max-width: 300px;
         display: block;
         margin-right: 5px;
-        
+
+    }
+    #foto{
+      max-width: 350px;
+      position: relative;
+      top: 80px;
     }
 
-
 }
+
